--- a/SearchAndStoreAlbums/ViewControllers/AlbumDetailViewController/AlbumDetailViewController.xib
+++ b/SearchAndStoreAlbums/ViewControllers/AlbumDetailViewController/AlbumDetailViewController.xib
@@ -11,6 +11,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="AlbumDetailViewController" customModule="SearchAndStoreAlbums" customModuleProvider="target">
             <connections>
+                <outlet property="buttonToggleAlbumPersistence" destination="16c-qF-H17" id="88S-c0-IfW"/>
                 <outlet property="imageViewAlbumArt" destination="shb-Pm-ZZx" id="YU0-UZ-n3P"/>
                 <outlet property="labelAlbumName" destination="Ck1-X2-lBn" id="80w-Vt-b66"/>
                 <outlet property="labelArtistName" destination="ff9-R4-pfz" id="yPp-UF-kOh"/>
@@ -33,7 +34,7 @@
                     </constraints>
                 </view>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="FFm-wb-mdW">
-                    <rect key="frame" x="0.0" y="114" width="414" height="250"/>
+                    <rect key="frame" x="0.0" y="114" width="414" height="300"/>
                     <subviews>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="Ck1-X2-lBn">
                             <rect key="frame" x="10" y="5" width="394" height="30"/>
@@ -55,26 +56,43 @@
                             <nil key="highlightedColor"/>
                         </label>
                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="shb-Pm-ZZx">
-                            <rect key="frame" x="20" y="90" width="374" height="140"/>
+                            <rect key="frame" x="20" y="75" width="374" height="165"/>
                         </imageView>
+                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="16c-qF-H17">
+                            <rect key="frame" x="20" y="245" width="374" height="50"/>
+                            <color key="backgroundColor" red="0.34666699169999998" green="0.63203471899999997" blue="0.83116215469999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            <constraints>
+                                <constraint firstAttribute="height" constant="50" id="rKF-nd-qf4"/>
+                            </constraints>
+                            <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
+                            <state key="normal" title="Button">
+                                <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            </state>
+                            <connections>
+                                <action selector="buttonToggleAlbumPersistenceTapped:" destination="-1" eventType="touchUpInside" id="9e2-9d-SVg"/>
+                            </connections>
+                        </button>
                     </subviews>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <constraints>
                         <constraint firstAttribute="trailing" secondItem="shb-Pm-ZZx" secondAttribute="trailing" constant="20" id="1lR-p9-Glq"/>
                         <constraint firstItem="ff9-R4-pfz" firstAttribute="leading" secondItem="FFm-wb-mdW" secondAttribute="leading" constant="5" id="1pV-YZ-0N3"/>
                         <constraint firstItem="ff9-R4-pfz" firstAttribute="top" secondItem="Ck1-X2-lBn" secondAttribute="bottom" constant="5" id="2QF-5R-PZ0"/>
-                        <constraint firstAttribute="height" constant="250" id="6OX-kN-ahk"/>
+                        <constraint firstAttribute="height" constant="300" id="6OX-kN-ahk"/>
+                        <constraint firstAttribute="bottom" secondItem="16c-qF-H17" secondAttribute="bottom" constant="5" id="Fq1-Ru-gxV"/>
                         <constraint firstItem="Ck1-X2-lBn" firstAttribute="top" secondItem="FFm-wb-mdW" secondAttribute="top" constant="5" id="L8K-v6-VV6"/>
                         <constraint firstAttribute="trailing" secondItem="Ck1-X2-lBn" secondAttribute="trailing" constant="10" id="PKe-1D-1Jx"/>
-                        <constraint firstAttribute="bottom" secondItem="shb-Pm-ZZx" secondAttribute="bottom" constant="20" id="WFc-Sh-gQS"/>
-                        <constraint firstItem="shb-Pm-ZZx" firstAttribute="top" secondItem="ff9-R4-pfz" secondAttribute="bottom" constant="20" id="dc3-Pu-GJn"/>
+                        <constraint firstItem="16c-qF-H17" firstAttribute="leading" secondItem="FFm-wb-mdW" secondAttribute="leading" constant="20" id="ctV-Dh-tIw"/>
+                        <constraint firstItem="shb-Pm-ZZx" firstAttribute="top" secondItem="ff9-R4-pfz" secondAttribute="bottom" constant="5" id="dc3-Pu-GJn"/>
                         <constraint firstAttribute="trailing" secondItem="ff9-R4-pfz" secondAttribute="trailing" constant="5" id="f3B-Fz-kcI"/>
+                        <constraint firstItem="16c-qF-H17" firstAttribute="top" secondItem="shb-Pm-ZZx" secondAttribute="bottom" constant="5" id="k2p-2f-UKd"/>
                         <constraint firstItem="shb-Pm-ZZx" firstAttribute="leading" secondItem="FFm-wb-mdW" secondAttribute="leading" constant="20" id="l0I-Uc-b0S"/>
                         <constraint firstItem="Ck1-X2-lBn" firstAttribute="leading" secondItem="FFm-wb-mdW" secondAttribute="leading" constant="10" id="tHb-JI-wlT"/>
+                        <constraint firstAttribute="trailing" secondItem="16c-qF-H17" secondAttribute="trailing" constant="20" id="vZA-10-NgY"/>
                     </constraints>
                 </view>
-                <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="grouped" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="18" sectionFooterHeight="18" translatesAutoresizingMaskIntoConstraints="NO" id="3Na-YK-XqF">
-                    <rect key="frame" x="0.0" y="364" width="414" height="498"/>
+                <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="grouped" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="10" sectionFooterHeight="10" translatesAutoresizingMaskIntoConstraints="NO" id="3Na-YK-XqF">
+                    <rect key="frame" x="0.0" y="414" width="414" height="448"/>
                     <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
                     <connections>
                         <outlet property="dataSource" destination="-1" id="XdI-Gg-DOl"/>
@@ -95,6 +113,7 @@
                 <constraint firstItem="CNd-Ox-X0X" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" id="ukL-Tq-RSu"/>
             </constraints>
             <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
+            <point key="canvasLocation" x="47.826086956521742" y="35.491071428571423"/>
         </view>
     </objects>
 </document>
