even image url saved

--- a/SearchAndStoreAlbums/ViewControllers/AlbumDetailViewController/AlbumDetailViewController.xib
+++ b/SearchAndStoreAlbums/ViewControllers/AlbumDetailViewController/AlbumDetailViewController.xib
@@ -91,7 +91,7 @@
                         <constraint firstAttribute="trailing" secondItem="16c-qF-H17" secondAttribute="trailing" constant="20" id="vZA-10-NgY"/>
                     </constraints>
                 </view>
-                <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="grouped" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="10" sectionFooterHeight="10" translatesAutoresizingMaskIntoConstraints="NO" id="3Na-YK-XqF">
+                <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="grouped" separatorStyle="default" allowsSelection="NO" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="10" sectionFooterHeight="10" translatesAutoresizingMaskIntoConstraints="NO" id="3Na-YK-XqF">
                     <rect key="frame" x="0.0" y="414" width="414" height="448"/>
                     <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
                     <connections>
