--- a/SearchAndStoreAlbums/CollectionViewCells/BasicAlbumInfoCollectionViewCell/BasicAlbumInfoCollectionViewCell.xib
+++ b/SearchAndStoreAlbums/CollectionViewCells/BasicAlbumInfoCollectionViewCell/BasicAlbumInfoCollectionViewCell.xib
@@ -12,53 +12,65 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="SearchAndStoreAlbums.BasicAlbumInfoCollectionViewCell" id="gTV-IL-0wX" customClass="BasicAlbumInfoCollectionViewCell" customModule="SearchAndStoreAlbums" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="196" height="172"/>
+            <rect key="frame" x="0.0" y="0.0" width="323" height="246"/>
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                <rect key="frame" x="0.0" y="0.0" width="196" height="172"/>
+                <rect key="frame" x="0.0" y="0.0" width="323" height="246"/>
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
-                    <stackView opaque="NO" contentMode="scaleToFill" ambiguous="YES" axis="vertical" distribution="fillProportionally" translatesAutoresizingMaskIntoConstraints="NO" id="g9v-jf-rkR">
-                        <rect key="frame" x="0.0" y="0.0" width="196" height="172"/>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Yz7-fa-Klz">
+                        <rect key="frame" x="0.0" y="0.0" width="323" height="246"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="hRN-6v-WLL">
-                                <rect key="frame" x="0.0" y="0.0" width="196" height="57.5"/>
-                                <color key="backgroundColor" red="0.34666699169999998" green="0.63203471899999997" blue="0.83116215469999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="6xi-91-MtW">
-                                <rect key="frame" x="0.0" y="57.5" width="196" height="57"/>
-                                <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="pnj-mC-Jst">
-                                <rect key="frame" x="0.0" y="114.5" width="196" height="57.5"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="bIJ-vf-tuo">
+                                <rect key="frame" x="0.0" y="0.0" width="323" height="246"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="hRN-6v-WLL">
+                                        <rect key="frame" x="0.0" y="0.0" width="323" height="82"/>
+                                        <color key="backgroundColor" red="0.34666699169999998" green="0.63203471899999997" blue="0.83116215469999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="pnj-mC-Jst">
+                                        <rect key="frame" x="0.0" y="82" width="323" height="82"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="6xi-91-MtW">
+                                        <rect key="frame" x="0.0" y="164" width="323" height="82"/>
+                                        <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                            </stackView>
                         </subviews>
-                    </stackView>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="bIJ-vf-tuo" firstAttribute="leading" secondItem="Yz7-fa-Klz" secondAttribute="leading" id="3GN-Va-edv"/>
+                            <constraint firstAttribute="trailing" secondItem="bIJ-vf-tuo" secondAttribute="trailing" id="82N-h6-AKR"/>
+                            <constraint firstItem="bIJ-vf-tuo" firstAttribute="top" secondItem="Yz7-fa-Klz" secondAttribute="top" id="EXh-9i-o0j"/>
+                            <constraint firstAttribute="bottom" secondItem="bIJ-vf-tuo" secondAttribute="bottom" id="w1o-Ed-Mly"/>
+                        </constraints>
+                    </view>
                 </subviews>
             </view>
             <constraints>
-                <constraint firstAttribute="trailing" secondItem="g9v-jf-rkR" secondAttribute="trailing" id="BD6-cR-LSr"/>
-                <constraint firstAttribute="bottom" secondItem="g9v-jf-rkR" secondAttribute="bottom" id="FJK-Z7-nLN"/>
-                <constraint firstItem="g9v-jf-rkR" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="RUQ-Ms-Mzn"/>
-                <constraint firstItem="g9v-jf-rkR" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="vW4-Gn-pzU"/>
+                <constraint firstAttribute="trailing" secondItem="Yz7-fa-Klz" secondAttribute="trailing" id="Swh-7b-Ye3"/>
+                <constraint firstItem="Yz7-fa-Klz" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="UKS-ZD-7wM"/>
+                <constraint firstAttribute="bottom" secondItem="Yz7-fa-Klz" secondAttribute="bottom" id="XP6-4b-sw0"/>
+                <constraint firstItem="Yz7-fa-Klz" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="lTc-dP-otW"/>
             </constraints>
             <viewLayoutGuide key="safeArea" id="ZTg-uK-7eu"/>
-            <size key="customSize" width="196" height="172"/>
+            <size key="customSize" width="323" height="246"/>
             <connections>
                 <outlet property="labelAlbumName" destination="hRN-6v-WLL" id="S4b-4x-rsn"/>
                 <outlet property="labelArtistName" destination="6xi-91-MtW" id="QyJ-Ya-HXQ"/>
                 <outlet property="labelTracksCount" destination="pnj-mC-Jst" id="KsC-tH-ipe"/>
             </connections>
-            <point key="canvasLocation" x="243.47826086956525" y="111.83035714285714"/>
+            <point key="canvasLocation" x="-32.608695652173914" y="-54.910714285714285"/>
         </collectionViewCell>
     </objects>
 </document>
